--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '2'
 services:
   fog_computing_server:
     build:
@@ -12,3 +11,13 @@ services:
       - ./requirements.txt:/home/fog/requirements.txt
     ports:
       - "8000:8000"
+  fog_computing_client:
+    build:
+      context: .
+      dockerfile: client/client.dockerfile
+    command: /home/fog/fogComputingVenv/bin/python client/client_main.py
+    container_name: fog_computing_client
+    working_dir: /home/fog
+    volumes:
+      - ./client:/home/fog/client
+      - ./requirements.txt:/home/fog/requirements.txt
